; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_hal_btcoex.c_hal_btcoex_InitHwConfig.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_hal_btcoex.c_hal_btcoex_InitHwConfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@GLBtCoexist = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hal_btcoex_InitHwConfig(%struct.adapter* %0, i32 %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.adapter*, %struct.adapter** %3, align 8
  %6 = call i32 @hal_btcoex_IsBtExist(%struct.adapter* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %13

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @EXhalbtcoutsrc_InitHwConfig(i32* @GLBtCoexist, i32 %10)
  %12 = call i32 @EXhalbtcoutsrc_InitCoexDm(i32* @GLBtCoexist)
  br label %13

13:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @hal_btcoex_IsBtExist(%struct.adapter*) #1

declare dso_local i32 @EXhalbtcoutsrc_InitHwConfig(i32*, i32) #1

declare dso_local i32 @EXhalbtcoutsrc_InitCoexDm(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
